Install proper dependency for `7za` on Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
 - '3.8-dev'
 
 before_install:
-- sudo apt-get install p7zip
+- sudo apt-get install p7zip-full
 
 install:
 - pip install .
