--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,14 @@ python:
 - '3.7'
 - '3.8-dev'
 
+matrix:
+  include:
+  - os: linux
+    dist: xenial
+
+  - os: linux
+    dist: bionic
+
 before_install:
 - sudo apt-get install p7zip-full
 
