--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 polyfile/triddefs_xml.7z
 polyfile/defs/*
 polyfile/defs.json.bz2
+poyfile/full_trie.json.bz2
+polyfile/partial_trie.json.bz2
 ~*
 *.pyc
