--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,11 +12,12 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]  # macos-latest,
         python-version: ["3.7", "3.8", "3.9", "3.10"]
+
+    runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v2
@@ -32,7 +33,7 @@ jobs:
         (New-Object System.Net.WebClient).DownloadFile("https://github.com/kaitai-io/kaitai_struct_compiler/releases/download/0.9/kaitai-struct-compiler-0.9.zip","kaitai-struct-compiler-0.9.zip");
         Expand-Archive .\kaitai-struct-compiler-0.9.zip .;
         echo "$((Get-Item .).FullName)/kaitai-struct-compiler-0.9/bin/kaitai-struct-compiler" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-    - name: INstall Kaitai Struct for Linux
+    - name: Install Kaitai Struct for Linux
       if: runner.os == 'Linux'
       run: |
         curl -LO https://github.com/kaitai-io/kaitai_struct_compiler/releases/download/0.9/kaitai-struct-compiler_0.9_all.deb
