--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -32,6 +32,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install setuptools
         pip install .[dev]
+    - name: Scan with pip-audit
+      uses: trailofbits/gh-action-pip-audit@v0.0.4
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
