--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -42,9 +42,9 @@ jobs:
         flake8 polyfile polymerge tests --exclude polyfile/kaitai/parsers --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Setup upterm session
       uses: lhotari/action-upterm@v1
-      with:
+      ## with:
         ## limits ssh access and adds the ssh public key for the user which triggered the workflow
-        limit-access-to-actor: true
+        ## limit-access-to-actor: true
         ## limits ssh access and adds the ssh public keys of the listed GitHub users
         ## limit-access-to-users: githubuser1,githubuser2
     - name: Test with pytest
