--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -40,8 +40,8 @@ jobs:
         flake8 polyfile polymerge tests --exclude polyfile/kaitai/parsers --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 polyfile polymerge tests --exclude polyfile/kaitai/parsers --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Setup tmate session
-      uses: mxschmitt/action-tmate@v1
+    ##- name: Setup tmate session
+    ##  uses: mxschmitt/action-tmate@v1
     - name: Test with pytest
       run: |
         pytest tests
