--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,3 @@
 [build-system]
-requires = ["setuptools>=65.5.1", "pyyaml>=3.13"]
+requires = ["setuptools>=70.0.0"]
 build-backend = "setuptools.build_meta"
